[B]Retrospect v5.2.11 - Changelog - 2020-08-29[/B]

A minor update that includes fixes for RTL XL, SVT Play, NPO Start and Nickelodeon channels.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: "Amsterdam Vandaag" was missing from the AT5 channel (Fixes #1418)