@@ -6,7 +6,8 @@ A minor update that includes fixes for RTL XL, SVT Play, NPO Start and Nickelode
 _None_
 
 [B]GUI/Settings/Language related[/B]
-_None_
+* Added: More explanation for the Retrospect Vault.
 
 [B]Channel related[/B]
 * Fixed: "Amsterdam Vandaag" was missing from the AT5 channel (Fixes #1418)
+va
